--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply min-h-screen bg-gradient-to-t from-[#B7BAC4] to-[#E7E9ED];
+    @apply min-h-screen bg-gradient-to-t from-darkGradient to-ligthGradient;
   }
 }
 
